--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
       <h1>Welcome to Unger Chiropractic Clinic</h1>
       <img src="Pictures/clinic.jpg" alt="clinic offices" id="clinic-pic">
       <p>Your journey to superior healing and total wellness can begin today. We look forward to discussing the issues that you are facing, working on solutions and helping to implement those changes in your life.</p>
-      <p>Our practice specializes in treating a variety of conditions. We treate patients daily who suffer from chronic lower back and neck pian, headaches, repetitive stress disorders, sports injuries, work injuries and whiplash.Our cares i unique. We provide for our patients excellent chiropractic care, applied kinesiology, physio-therapy modalities, as well as professional nutritional counseling.</p>
+      <p>Our practice specializes in treating a variety of conditions. We treat patients daily who suffer from chronic lower back and neck pian, headaches, repetitive stress disorders, sports injuries, work injuries and whiplash.Our cares i unique. We provide for our patients excellent chiropractic care, applied kinesiology, physio-therapy modalities, as well as professional nutritional counseling.</p>
   </div>
 </body>
 </html>
