--- a/public/services.html
+++ b/public/services.html
@@ -18,7 +18,7 @@
 
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Unger Chriopractic</a>
+      <a class="navbar-brand" href="index.html">Unger Chriopractic</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -66,44 +66,49 @@
     <section id="services">
       <h1>Services</h1>
 
-      <h3>Chiropractic Treatment</h3>
+      <div class="row">
+        <div class="col-sm-6">
+            <h3>Chiropractic Treatment</h3>
 
-      <p>
-        The doctor of chiropractic is a specialist in spinal musculoskeletal
-        disorders. We are expertly trained to diagnose and treat the many
-        musculoskeletal injuries that may occur on the job, in sports, or in
-        your daily life.
-      </p>
+            <p>
+              The doctor of chiropractic is a specialist in spinal musculoskeletal
+              disorders. We are expertly trained to diagnose and treat the many
+              musculoskeletal injuries that may occur on the job, in sports, or in
+              your daily life.
+            </p>
+      
+            <p>
+              Upon injury, the individual often alters the normal position or
+              flexibility of the spinal vertebrae. Chiropractic treatment is designed
+              to restore normal alignment and thus minimize pain and suffering. Gentle
+              manipulative adjustments are often effective in rapidly returning the
+              injured person to a productive status. The doctor of chiropractic can
+              also provide guidance with advice designed to reduce work-related
+              injuries, proper lifting procedures and therapeutic stretching
+              exercises.
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <h4>Techniques Utilized:</h4>
 
-      <p>
-        Upon injury, the individual often alters the normal position or
-        flexibility of the spinal vertebrae. Chiropractic treatment is designed
-        to restore normal alignment and thus minimize pain and suffering. Gentle
-        manipulative adjustments are often effective in rapidly returning the
-        injured person to a productive status. The doctor of chiropractic can
-        also provide guidance with advice designed to reduce work-related
-        injuries, proper lifting procedures and therapeutic stretching
-        exercises.
-      </p>
-
-      <h4>Techniques Utilized:</h4>
-
-      <ul class="services-techniques-used">
-        <li>Applied Kinesiology (AK)</li>
-        <li>Allergy/Sensitivity Elimination and Reprogramming Technique</li>
-        <li>Chromatherapy (Color)</li>
-        <li>Low Level Laser Therapy</li>
-        <li>Detoxification Therapy (EB-305)</li>
-        <li>Electrical Muscle Stimulation</li>
-        <li>Emotional Therapy</li>
-        <li>Eyelight Therapy</li>
-        <li>Magnetic Field Therapy</li>
-        <li>Myofascial Release</li>
-        <li>Neurofeedback</li>
-        <li>Nutritional consultation</li>
-        <li>Ultrasound</li>
-        <li>Orthotics</li>
-      </ul>
+            <ul class="services-techniques-used">
+              <li>Applied Kinesiology (AK)</li>
+              <li>Allergy/Sensitivity Elimination and Reprogramming Technique</li>
+              <li>Chromatherapy (Color)</li>
+              <li>Low Level Laser Therapy</li>
+              <li>Detoxification Therapy (EB-305)</li>
+              <li>Electrical Muscle Stimulation</li>
+              <li>Emotional Therapy</li>
+              <li>Eyelight Therapy</li>
+              <li>Magnetic Field Therapy</li>
+              <li>Myofascial Release</li>
+              <li>Neurofeedback</li>
+              <li>Nutritional consultation</li>
+              <li>Ultrasound</li>
+              <li>Orthotics</li>
+            </ul>
+        </div>
+      </div>
     </section>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
