--- a/public/contactUs.html
+++ b/public/contactUs.html
@@ -18,7 +18,7 @@
 
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Unger Chriopractic</a>
+      <a class="navbar-brand" href="index.html">Unger Chriopractic</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -69,10 +69,10 @@
         <div class="row">
           <div class="col-sm">
             <h3>Oberlin Clinic</h3>
-            <h4>504 N Penn Ave</h4>
-            <h4>Oberlin, KS 67749</h4>
-            <h4>Phone: (785) 475-2219</h4>
-            <h4>Fax: (785) 475-2210</h4>
+            <h5>504 N Penn Ave</h5>
+            <h5>Oberlin, KS 67749</h5>
+            <h5>Phone: (785) 475-2219</h5>
+            <h5>Fax: (785) 475-2210</h5>
 
             <h3>Oberlin Office Hours:</h3>
             <p>
@@ -96,9 +96,9 @@
 
           <div class="col-sm">
             <h3>St. Francis Clinic</h3>
-            <h4>120 N Scott St</h4>
-            <h4>St. Francis, KS 67756</h4>
-            <h4>Phone: (785) 332-2186</h4>
+            <h5>120 N Scott St</h5>
+            <h5>St. Francis, KS 67756</h5>
+            <h5>Phone: (785) 332-2186</h5>
 
             <h3>St. Francis Office Hours:</h3>
             <p class="bold">Dr. Unger</p>
