--- a/public/firstVisit.html
+++ b/public/firstVisit.html
@@ -18,7 +18,7 @@
 
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Unger Chriopractic</a>
+      <a class="navbar-brand" href="index.html">Unger Chriopractic</a>
       <button
         class="navbar-toggler"
         type="button"
