--- a/public/index.html
+++ b/public/index.html
@@ -66,35 +66,35 @@
   </nav>
 
   <header>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="7000">
+
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
-        <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('http://placehold.it/1900x1080')">
-          <div class="carousel-caption d-none d-md-block">
-            <h3>First Slide</h3>
-            <p>This is a description for the first slide.</p>
+        <!-- slide 1 -->
+        <div class="carousel-item active" style="background-image: url('./pictures/UngerChiropractic.jpg')"
+          alt="Unger Chiropractic Business">
+          <div class="carousel-caption text-center">
+            <h1>Unger Chiropractic</h1>
+            <h3>Your journey to superior healing and total wellness can begin today.</h3>
+            <a class="btn btn-primary btn-lg" href="./services.html" role="button" target="blank">View Services</a>
           </div>
         </div>
-        <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
-          <div class="carousel-caption d-none d-md-block">
-            <h3>Second Slide</h3>
-            <p>This is a description for the second slide.</p>
-          </div>
+        <!-- Slide 2 -->
+        <div class="carousel-item" style="background-image: url('./pictures/UngerChiropractic.jpg')"
+          alt="Unger Chiropractic Business">
         </div>
-        <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
-          <div class="carousel-caption d-none d-md-block">
-            <h3>Third Slide</h3>
-            <p>This is a description for the third slide.</p>
-          </div>
+
+      </div>
+      <div class="carousel-item">
+        <div class="d-flex h-100 align-items-center justify-content-center">
+          <h1>Text 2</h1>
         </div>
       </div>
+
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
@@ -104,12 +104,13 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
+    </div>
   </header>
 
   <!-- Page Content -->
   <div class="container">
 
-    <h1 class="my-4 text-center">Welcome to Unger Chiropractic</h1>
+    <h1 class="my-4 text-left">Welcome to Unger Chiropractic</h1>
 
     <!-- Marketing Icons Section -->
     <div class="row mb-5">
