css changes to slider

--- a/public/index.html
+++ b/public/index.html
@@ -67,13 +67,13 @@
 
   <header>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="7000">
-
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <!-- <li data-target="#carouselExampleIndicators" data-slide-to="2"></li> -->
       </ol>
       <div class="carousel-inner" role="listbox">
+
         <!-- slide 1 -->
         <div class="carousel-item active" style="background-image: url('./pictures/UngerChiropractic.jpg')"
           alt="Unger Chiropractic Business">
@@ -83,27 +83,23 @@
             <a class="btn btn-primary btn-lg" href="./services.html" role="button" target="blank">View Services</a>
           </div>
         </div>
+        <!-- End Slide 1 -->
+
         <!-- Slide 2 -->
         <div class="carousel-item" style="background-image: url('./pictures/UngerChiropractic.jpg')"
           alt="Unger Chiropractic Business">
         </div>
+        <!-- End Slide 2 -->
 
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-      <div class="carousel-item">
-        <div class="d-flex h-100 align-items-center justify-content-center">
-          <h1>Text 2</h1>
-        </div>
-      </div>
-
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
     </div>
   </header>
 
