--- a/public/index.html
+++ b/public/index.html
@@ -78,9 +78,10 @@
         <div class="carousel-item active" style="background-image: url('./pictures/UngerChiropractic.jpg')"
           alt="Unger Chiropractic Business">
           <div class="carousel-caption text-center">
-            <h1>Unger Chiropractic</h1>
-            <h3>Your journey to superior healing and total wellness can begin today.</h3>
-            <a class="btn btn-primary btn-lg" href="./services.html" role="button" target="blank">View Services</a>
+            <h1 class="pb-3 pl-3 pr-3">Unger Chiropractic</h1>
+            <h3 class="pb-4 pl-3 pr-3">Your journey to superior healing and total wellness can begin today.</h3>
+            <a class="btn btn-outline-light btn-lg" href="./services.html" role="button" target="blank">View
+              Services</a>
           </div>
         </div>
         <!-- End Slide 1 -->
@@ -106,7 +107,7 @@
   <!-- Page Content -->
   <div class="container">
 
-    <h1 class="my-4 text-left">Welcome to Unger Chiropractic</h1>
+    <h2 class="p-5 text-center">Welcome to Unger Chiropractic Clinic</h2>
 
     <!-- Marketing Icons Section -->
     <div class="row mb-5">
@@ -148,8 +149,25 @@
         </div>
       </div>
     </div>
-    <!-- /.row -->
+  </div>
+  <!-- /.row -->
 
+  <!-- Business Callout -->
+  <div class="container-fluid">
+    <div class="row justify-content-center align-items-center callout">
+      <div class="col-sm col-md-auto">
+        <h3 class="text-left">Call us for a free consultation</h3>
+      </div>
+      <div class="col-sm col-md-auto">
+        <!-- Call to Action Section -->
+        <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
+      </div>
+    </div>
+  </div>
+  <!-- /Row -->
+
+
+  <div class="container pb-5 pt-5">
     <!-- Features Section -->
     <div class="row">
       <div class="col-lg-6">
@@ -173,21 +191,8 @@
       </div>
     </div>
     <!-- /.row -->
-
-    <hr>
-
-    <!-- Call to Action Section -->
-    <div class="row mb-4">
-      <div class="col-md-8">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti
-          beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
-      </div>
-      <div class="col-md-4">
-        <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
-      </div>
-    </div>
-
   </div>
+
   <!-- /.container -->
 
   <!-- Weather Widget -->
