--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
         <!-- End Slide 1 -->
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url('./pictures/UngerChiropractic.jpg')"
+        <div class="carousel-item" style="background-image: url('./pictures/massage.jpg')"
           alt="Unger Chiropractic Business">
         </div>
         <!-- End Slide 2 -->
@@ -107,40 +107,42 @@
   <!-- Page Content -->
   <div class="container">
 
-    <h2 class="p-5 text-center">Welcome to Unger Chiropractic Clinic</h2>
-
+    <h2 class="pt-5 pb-3 text-center">Welcome to Unger Chiropractic Clinic</h2>
+    <p class="text-center pb-3">Your journey to superior healing and total wellness can begin today. We look forward to
+      discussing the issues
+      that you are facing, working on solutions and helping to implement those changes in your life.</p>
     <!-- Marketing Icons Section -->
     <div class="row mb-5">
       <div class="col-lg-4 mb-4">
         <div class="card">
           <img class="card-img-top" src="./pictures/spine.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Total Wellness</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="./services.html" class="btn btn-primary">View Services</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card">
-          <img class="card-img-top" src="./pictures/applied_kinesiology.jpg" alt="Card image cap">
+          <img class="card-img-top" src="./pictures/Facial_Rejuvination_2.jpg" alt="facial rejuven">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Body Sculpting</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="./bodylight.html" class="btn btn-primary">Read More</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card">
-          <img class="card-img-top" src="./pictures/spine.jpg" alt="Card image cap">
+          <img class="card-img-top" src="./pictures/massage_2.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Massage</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="./massage.html" class="btn btn-primary">Read More</a>
           </div>
         </div>
       </div>
@@ -152,11 +154,11 @@
   <div class="container-fluid">
     <div class="row justify-content-center align-items-center callout">
       <div class="col-sm col-md-auto">
-        <h3 class="text-left">Call us for a free consultation</h3>
+        <h3 class="text-left">Call us for an appointment</h3>
       </div>
       <div class="col-sm col-md-auto">
         <!-- Call to Action Section -->
-        <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
+        <a class="btn btn-lg btn-secondary btn-block" href="./contactUs.html">Contact Us</a>
       </div>
     </div>
   </div>
@@ -168,19 +170,10 @@
     <div class="row">
       <div class="col-lg-6">
         <h2>Modern Business Features</h2>
-        <p>The Modern Business template by Start Bootstrap includes:</p>
-        <ul>
-          <li>
-            <strong>Bootstrap v4</strong>
-          </li>
-          <li>jQuery</li>
-          <li>Font Awesome</li>
-          <li>Working contact form with validation</li>
-          <li>Unstyled page elements for easy customization</li>
-        </ul>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id
-          reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum
-          ducimus unde.</p>
+        <p>Our practice specializes in treating a variety of conditions. We treat patients daily who suffer from chronic
+          lower back and neck pain, headaches, repetitive stress disorders, sports injuries, work injuries and whiplash.
+          Our care is unique. We provide for our patients excellent chiropractic care, applied kinesiology,
+          physio-therapy modalities, as well as professional nutritional counseling.</p>
       </div>
       <div class="col-lg-6">
         <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
@@ -202,7 +195,16 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Unger Chiropractic Clinic 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy;2019 Unger Chiropractic Clinic</p>
+    </div>
+    <div class="container text-center pt-3">
+      <h6 class="text-white">We do not discriminate. Please view our policy.</h6>
+      <p class="text-white">Unger Chiropractic Nondiscrimination
+        policy.pdf
+        <a href="#" class="button" download>
+          <i class="fa fa-download text-white"></i></a></p>
+
+
     </div>
     <!-- /.container -->
   </footer>
