--- a/public/index.html
+++ b/public/index.html
@@ -33,25 +33,25 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Our Doctors</a>
+            <a class="nav-link" href="./ourDoctors.html">Our Doctors</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Bodylight Fat Reduction</a>
+            <a class="nav-link" href="./bodylight.html">Bodylight Fat Reduction</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Massage</a>
+            <a class="nav-link" href="./massage.html">Massage</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">First Visit</a>
+            <a class="nav-link" href="./firstVisit.html">First Visit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Patient Downloads</a>
+            <a class="nav-link" href="#">Patient Downloads</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">CDL Medical Exam</a>
+            <a class="nav-link" href="./cdlMedicalExam.html">CDL Medical Exam</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact Us</a>
@@ -88,7 +88,13 @@
 
         <!-- Slide 2 -->
         <div class="carousel-item" style="background-image: url('./pictures/massage.jpg')"
-          alt="Unger Chiropractic Business">
+          alt="Unger Chiropractic Business" id="slide-2">
+          <div class="carousel-caption text-center">
+            <h1 class="pb-3 pl-3 pr-3">Unger Chiropractic</h1>
+            <h3 class="pb-4 pl-3 pr-3">Your journey to superior healing and total wellness can begin today.</h3>
+            <a class="btn btn-outline-light btn-lg" href="./services.html" role="button" target="blank">View
+              Services</a>
+          </div>
         </div>
         <!-- End Slide 2 -->
 
@@ -112,20 +118,19 @@
       discussing the issues
       that you are facing, working on solutions and helping to implement those changes in your life.</p>
     <!-- Marketing Icons Section -->
-    <div class="row mb-5">
+    <div class="row mb-4">
       <div class="col-lg-4 mb-4">
-        <div class="card">
+        <div class="card h-100">
           <img class="card-img-top" src="./pictures/spine.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Total Wellness</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+            <p class="card-text">We Strive to provide complete care for our patients.</p>
             <a href="./services.html" class="btn btn-primary">View Services</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
-        <div class="card">
+        <div class="card h-100">
           <img class="card-img-top" src="./pictures/Facial_Rejuvination_2.jpg" alt="facial rejuven">
           <div class="card-body">
             <h5 class="card-title">Body Sculpting</h5>
@@ -136,7 +141,7 @@
         </div>
       </div>
       <div class="col-lg-4 mb-4">
-        <div class="card">
+        <div class="card h-100">
           <img class="card-img-top" src="./pictures/massage_2.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Massage</h5>
@@ -152,13 +157,14 @@
 
   <!-- Business Callout -->
   <div class="container-fluid">
-    <div class="row justify-content-center align-items-center callout">
+    <div class="row justify-content-center align-items-center callout p-4">
       <div class="col-sm col-md-auto">
-        <h3 class="text-left">Call us for an appointment</h3>
+        <h5 class="text-left text-center">Start your journey to complete wellness. Call us for an appointment today.
+        </h5>
       </div>
       <div class="col-sm col-md-auto">
-        <!-- Call to Action Section -->
-        <a class="btn btn-lg btn-secondary btn-block" href="./contactUs.html">Contact Us</a>
+        <h5 class="text-center">Oberlin Office: 785-475-2219</h5>
+        <h5 class="text-center">St. Francis Clinic: 785-332-2186</h5>
       </div>
     </div>
   </div>
@@ -169,14 +175,16 @@
     <!-- Features Section -->
     <div class="row">
       <div class="col-lg-6">
-        <h2>Modern Business Features</h2>
+        <h2>Our Care Is Unique</h2>
         <p>Our practice specializes in treating a variety of conditions. We treat patients daily who suffer from chronic
           lower back and neck pain, headaches, repetitive stress disorders, sports injuries, work injuries and whiplash.
           Our care is unique. We provide for our patients excellent chiropractic care, applied kinesiology,
           physio-therapy modalities, as well as professional nutritional counseling.</p>
       </div>
       <div class="col-lg-6">
-        <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
+        <div class="card">
+          <img class="img-fluid rounded" src="./pictures/applied_kinesiology_2.jpg" alt="">
+        </div>
       </div>
     </div>
     <!-- /.row -->
@@ -193,21 +201,51 @@
   <!-- /.row -->
 
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy;2019 Unger Chiropractic Clinic</p>
-    </div>
-    <div class="container text-center pt-3">
-      <h6 class="text-white">We do not discriminate. Please view our policy.</h6>
-      <p class="text-white">Unger Chiropractic Nondiscrimination
-        policy.pdf
-        <a href="#" class="button" download>
-          <i class="fa fa-download text-white"></i></a></p>
+  <footer class="py-5">
 
-
+    <div class="container pt-3">
+      <div class="row">
+        <!-- Column 1 -->
+        <div class="col-md-4">
+          <h6 class="font-weight-bold">Unger Chiropractic</h6>
+          <p>Your journey to superior healing and total wellness can begin today.</p>
+          <p>We do not discriminate. Please view our policy. Unger Chiropractic Nondiscrimination
+            policy.pdf&nbsp;<a href="#" class="button" download>
+              <i class="fa fa-download text-white"></i></a>
+          </p>
+        </div>
+        <!-- Column 2 -->
+        <div class="col-md-4">
+          <h6>Useful Links</h6>
+          <nav class="nav flex-column pb-4">
+            <a class="nav-link pl-0" href="./ourDoctors.html" target="blank">Our Doctors</a>
+            <a class="nav-link pl-0" href="./services.html" target="blank">Services</a>
+            <a class="nav-link pl-0" href="./bodylight.html" target="blank">Bodylight Fat Reduction</a>
+            <a class="nav-link pl-0" href="./massage.html" target="blank">Massage</a>
+            <a class="nav-link pl-0" href="./firstVisit.html" target="blank">First Visit</a>
+            <a class="nav-link pl-0" href="./" target="blank">Patient Downloads</a>
+            <a class="nav-link pl-0" href="./cdlMedicalExam.html" target="blank">CDL Medical Exams</a>
+          </nav>
+        </div>
+        <hr>
+        <!-- Column 3 -->
+        <div class="col-md-4">
+          <h6>Contact</h6>
+        </div>
+      </div>
     </div>
-    <!-- /.container -->
   </footer>
+
+  <!-- /.container -->
+
+  <!-- Copyright -->
+  <footer class="py-2 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white" id="copyright">Copyright &copy;2019 Unger Chiropractic Clinic</p>
+  </footer>
+  <!-- /.container -->
+
+
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
