updated html and css

--- a/public/index.html
+++ b/public/index.html
@@ -120,18 +120,19 @@
     <!-- Marketing Icons Section -->
     <div class="row mb-4">
       <div class="col-lg-4 mb-4">
-        <div class="card h-100">
+        <div class="card h-100 shadow-lg p-3 bg-white rounded border-0">
           <img class="card-img-top" src="./pictures/spine.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Total Wellness</h5>
-            <p class="card-text">We Strive to provide complete care for our patients.</p>
+            <p class="card-text">We Strive to provide complete care for our patients. Our practice specializes in
+              treating a variety of conditions.</p>
             <a href="./services.html" class="btn btn-primary">View Services</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="./pictures/Facial_Rejuvination_2.jpg" alt="facial rejuven">
+        <div class="card h-100 shadow-lg p-3 bg-white rounded border-0">
+          <img class="card-img-top" src="./pictures/Facial_Rejuvination_2.jpg" alt="facial rejuvenation">
           <div class="card-body">
             <h5 class="card-title">Body Sculpting</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -141,7 +142,7 @@
         </div>
       </div>
       <div class="col-lg-4 mb-4">
-        <div class="card h-100">
+        <div class="card h-100 shadow-lg p-3 bg-white rounded border-0">
           <img class="card-img-top" src="./pictures/massage_2.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Massage</h5>
@@ -182,8 +183,8 @@
           physio-therapy modalities, as well as professional nutritional counseling.</p>
       </div>
       <div class="col-lg-6">
-        <div class="card">
-          <img class="img-fluid rounded" src="./pictures/applied_kinesiology_2.jpg" alt="">
+        <div class="card h-100 shadow-lg p-3 bg-white rounded border-0">
+          <img class="img-fluid rounded" src="./pictures/applied_kinesiology_2.jpg" alt="applied kinesiology">
         </div>
       </div>
     </div>
@@ -244,8 +245,6 @@
       <p class="m-0 text-center text-white" id="copyright">Copyright &copy;2019 Unger Chiropractic Clinic</p>
   </footer>
   <!-- /.container -->
-
-
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
