updated html and css

--- a/public/index.html
+++ b/public/index.html
@@ -33,31 +33,31 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./ourDoctors.html">Our Doctors</a>
+            <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
+            <a class="nav-link" href="services.html" target="blank">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./bodylight.html">Bodylight Fat Reduction</a>
+            <a class="nav-link" href="./bodylight.html" target="blank">Bodylight Fat Reduction</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./massage.html">Massage</a>
+            <a class="nav-link" href="./massage.html" target="blank">Massage</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./firstVisit.html">First Visit</a>
+            <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Patient Downloads</a>
+            <a class="nav-link" href="#" target="blank">Patient Downloads</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./cdlMedicalExam.html">CDL Medical Exam</a>
+            <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+            <a class="nav-link" href="./contactUs.html" target="blank">Contact Us</a>
           </li>
           <!-- Social Icons -->
-          <li><a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="_blank"><i
+          <li><a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><i
                 class="fab fa-facebook"></i></a></li>
           <!-- /.row -->
         </ul>
@@ -90,7 +90,7 @@
         <div class="carousel-item" style="background-image: url('./pictures/massage.jpg')"
           alt="Unger Chiropractic Business" id="slide-2">
           <div class="carousel-caption text-center">
-            <h1 class="pb-3 pl-3 pr-3">Unger Chiropractic</h1>
+            <h1 class="pb-3 pl-3 pr-3 text-sm-center">Unger Chiropractic</h1>
             <h3 class="pb-4 pl-3 pr-3">Your journey to superior healing and total wellness can begin today.</h3>
             <a class="btn btn-outline-light btn-lg" href="./services.html" role="button" target="blank">View
               Services</a>
@@ -158,14 +158,16 @@
 
   <!-- Business Callout -->
   <div class="container-fluid">
-    <div class="row justify-content-center align-items-center callout p-4">
+    <div class="row justify-content-center align-items-center callout p-4 border border-light">
       <div class="col-sm col-md-auto">
-        <h5 class="text-left text-center">Start your journey to complete wellness. Call us for an appointment today.
+        <h5 class="text-left text-info">Start your journey to complete wellness. Call us for an
+          appointment
+          today.
         </h5>
       </div>
       <div class="col-sm col-md-auto">
-        <h5 class="text-center">Oberlin Office: 785-475-2219</h5>
-        <h5 class="text-center">St. Francis Clinic: 785-332-2186</h5>
+        <h5 class="text-center text-info">Oberlin Office: 785-475-2219</h5>
+        <h5 class="text-center text-info">St. Francis Clinic: 785-332-2186</h5>
       </div>
     </div>
   </div>
@@ -181,6 +183,7 @@
           lower back and neck pain, headaches, repetitive stress disorders, sports injuries, work injuries and whiplash.
           Our care is unique. We provide for our patients excellent chiropractic care, applied kinesiology,
           physio-therapy modalities, as well as professional nutritional counseling.</p>
+        <a href="./services.html" class="btn btn-primary mt-3 mb-3">View Services</a>
       </div>
       <div class="col-lg-6">
         <div class="card h-100 shadow-lg p-3 bg-white rounded border-0">
@@ -209,6 +212,7 @@
         <!-- Column 1 -->
         <div class="col-md-4">
           <h6 class="font-weight-bold">Unger Chiropractic</h6>
+          <div class="h-divider mt-3 mb-3 w-50"></div>
           <p>Your journey to superior healing and total wellness can begin today.</p>
           <p>We do not discriminate. Please view our policy. Unger Chiropractic Nondiscrimination
             policy.pdf&nbsp;<a href="#" class="button" download>
@@ -217,7 +221,8 @@
         </div>
         <!-- Column 2 -->
         <div class="col-md-4">
-          <h6>Useful Links</h6>
+          <h6><strong>Useful Links</strong></h6>
+          <div class="h-divider mt-3 mb-3 w-50"></div>
           <nav class="nav flex-column pb-4">
             <a class="nav-link pl-0" href="./ourDoctors.html" target="blank">Our Doctors</a>
             <a class="nav-link pl-0" href="./services.html" target="blank">Services</a>
@@ -231,7 +236,23 @@
         <hr>
         <!-- Column 3 -->
         <div class="col-md-4">
-          <h6>Contact</h6>
+          <h6><strong>Contact</strong></h6>
+          <div class="h-divider mt-3 mb-3 w-50"></div>
+          <h6><strong>Oberlin Clinic:</strong></h6>
+          <p>504 N Penn Ave
+            Oberlin, KS 67749<br>
+            Phone: (785) 475-2219<br>
+            Fax: (785) 475-2210
+          </p>
+          <h6><strong>St. Francis Clinic:</strong></h6>
+          <p>120 N Scott St
+            St. Francis, KS 67756<br>
+            Phone: (785) 332-2186
+          </p>
+          <a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><i
+              class="fab fa-facebook-f"></i>
+
+          </a>
         </div>
       </div>
     </div>
@@ -242,7 +263,8 @@
   <!-- Copyright -->
   <footer class="py-2 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white" id="copyright">Copyright &copy;2019 Unger Chiropractic Clinic</p>
+      <p class="m-0 text-center text-white" id="copyright">Copyright &copy;2019 Unger Chiropractic Clinic. All rights
+        reserved.</p>
   </footer>
   <!-- /.container -->
 
