updated html and css

--- a/public/ourDoctors.html
+++ b/public/ourDoctors.html
@@ -64,27 +64,22 @@
     </div>
   </nav>
 
-  <!-- Title Bar -->
-  <div class="container-fluid" id="title-bar">
-    <div class="container">
-      <div class="row align-objects-center">
-        <div class="col-sm-6">
-          <h1>Our Doctors</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  </div>
   <!-- / Row -->
 
-  <div class="container bg-dark mt-5">
+  <div class="container" id="body">
     <!-- Our Doctors section -->
     <div class="row">
+      <div class="col-sm-12 mt-4">
+        <div class="page-header">
+          <h1 class="display-4 text-center text-primary"><i class="fa fa-user-md">&nbsp;</i>Our Doctors</h1>
+          <div class="h-divider w-100">
+          </div>
+        </div>
+      </div>
       <div class="col-sm-8">
         <div class="col-sm-4 mt-5 mb-5">
-          <img src="../../pictures/ryan_unger_headshot.jpg" alt="A headshot picture of Dr. Ryan Unger"
-            class="headshot-picture" />
+          <img class="img-fluid" src="./pictures/ryan_unger_headshot_resize.png"
+            alt="A headshot picture of Dr. Ryan Unger" class="headshot-picture" />
         </div>
         <h3>Dr. Ryan Unger</h3>
         <p>
@@ -115,8 +110,8 @@
     <div class="row mb-5">
       <div class="col-sm-8">
         <div class="col-sm-4 mt-5 mb-5">
-          <img src="../../pictures/shannon_addleman_headshot.jpg" alt="A headshot picture of Dr. Shannon Addleman"
-            class="headshot-picture" />
+          <img class="img-fluid" src="./pictures/shannon_addleman_headshot.jpg"
+            alt="A headshot picture of Dr. Shannon Addleman" class="headshot-picture" />
         </div>
         <h3>Dr. Shannon Addleman</h3>
 
