updated html and css

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <!-- Google Fonts CSS -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Barlow:500,700|Roboto" rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
@@ -111,7 +111,7 @@
   </header>
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="container mt-5 mb-5">
 
     <h2 class="pt-5 pb-3 text-center">Welcome to Unger Chiropractic Clinic</h2>
     <p class="text-center pb-3">Your journey to superior healing and total wellness can begin today. We look forward to
@@ -126,7 +126,7 @@
             <h5 class="card-title">Total Wellness</h5>
             <p class="card-text">We Strive to provide complete care for our patients. Our practice specializes in
               treating a variety of conditions.</p>
-            <a href="./services.html" class="btn btn-primary">View Services</a>
+            <a href="./services.html" class="btn btn-outline-primary">View Services</a>
           </div>
         </div>
       </div>
@@ -137,7 +137,7 @@
             <h5 class="card-title">Body Sculpting</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="./bodylight.html" class="btn btn-primary">Read More</a>
+            <a href="./bodylight.html" class="btn btn-outline-primary">Read More</a>
           </div>
         </div>
       </div>
@@ -148,7 +148,7 @@
             <h5 class="card-title">Massage</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="./massage.html" class="btn btn-primary">Read More</a>
+            <a href="./massage.html" class="btn btn-outline-primary">Read More</a>
           </div>
         </div>
       </div>
@@ -157,24 +157,22 @@
   <!-- /.row -->
 
   <!-- Business Callout -->
-  <div class="container-fluid">
+  <div class="container-fluid mt-5 mb-5">
     <div class="row justify-content-center align-items-center callout p-4 border border-light">
       <div class="col-sm col-md-auto">
-        <h5 class="text-left text-info">Start your journey to complete wellness. Call us for an
-          appointment
-          today.
-        </h5>
-      </div>
-      <div class="col-sm col-md-auto">
-        <h5 class="text-center text-info">Oberlin Office: 785-475-2219</h5>
-        <h5 class="text-center text-info">St. Francis Clinic: 785-332-2186</h5>
+        <h3 class="text-center"></i><span style="color:#FC9838">Start your journey to complete
+            wellness. Call us for an
+            appointment today.</span>
+        </h3>
+        <h5 class="text-white text-center">Oberlin Office: 785-475-2219</h5>
+        <h5 class="text-white text-center">St. Francis Clinic: 785-332-2186</h5>
       </div>
     </div>
   </div>
   <!-- /Row -->
 
 
-  <div class="container pb-5 pt-5">
+  <div class="container mt-5 mb-5 pb-5 pt-5">
     <!-- Features Section -->
     <div class="row">
       <div class="col-lg-6">
@@ -183,7 +181,7 @@
           lower back and neck pain, headaches, repetitive stress disorders, sports injuries, work injuries and whiplash.
           Our care is unique. We provide for our patients excellent chiropractic care, applied kinesiology,
           physio-therapy modalities, as well as professional nutritional counseling.</p>
-        <a href="./services.html" class="btn btn-primary mt-3 mb-3">View Services</a>
+        <a href="./services.html" class="btn btn-outline-primary mt-3 mb-3">View Services</a>
       </div>
       <div class="col-lg-6">
         <div class="card h-100 shadow-lg p-3 bg-white rounded border-0">
@@ -198,8 +196,9 @@
 
   <!-- Weather Widget -->
 
-  <a class="weatherwidget-io" href="https://forecast7.com/en/39d82n100d53/oberlin/?unit=us" data-label_1="OBERLIN"
-    data-label_2="WEATHER" data-theme="original">OBERLIN WEATHER</a>
+  <div>
+    <a class="weatherwidget-io" href="https://forecast7.com/en/39d82n100d53/oberlin/?unit=us" data-label_1="OBERLIN"
+      data-label_2="WEATHER" data-theme="original">OBERLIN WEATHER</a>
   </div>
 
   <!-- /.row -->
