--- a/public/ourDoctors.html
+++ b/public/ourDoctors.html
@@ -64,38 +64,38 @@
     </div>
   </nav>
 
-  <!-- / Row -->
-
-  <div class="container" id="body">
-    <!-- Our Doctors section -->
-    <div class="row">
-      <div class="col-sm-12 mt-4">
-        <div class="page-header">
-          <h1 class="display-4 text-center text-primary"><i class="fa fa-user-md">&nbsp;</i>Our Doctors</h1>
-          <div class="h-divider w-100">
-          </div>
+  <!-- Header -->
+  <header class="bg-primary py-5 mb-5">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-lg-12">
+          <h1 class="display-4 text-white mt-5 mb-2 text-center">Our Doctors</h1>
+          <p class="lead mb-3 text-white text-center">Our doctors are here to provide you with the best possible care
+          </p>
         </div>
       </div>
-      <div class="col-sm-8">
-        <div class="col-sm-4 mt-5 mb-5">
-          <img class="img-fluid" src="./pictures/ryan_unger_headshot_resize.png"
-            alt="A headshot picture of Dr. Ryan Unger" class="headshot-picture" />
-        </div>
-        <h3>Dr. Ryan Unger</h3>
-        <p>
-          Born in Oberlin, KS, Dr. Unger was a graduate of DCHS. He attended
+    </div>
+  </header>
+
+  <!-- / Row -->
+
+  <!-- Page Content -->
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-8 mb-5">
+        <h2>Dr. Ryan Unger</h2>
+        <hr>
+        <p>Born in Oberlin, KS, Dr. Unger was a graduate of DCHS. He attended
           Kansas State University. Dr. Unger earned his B.S. degree in General
           Science and his Doctor of Chiropractic Degree in 2000 from Palmer
           College of Chiropractic in Davenport, IA. In the spring of 2000, he
           interned under Dr. Fair at Fair Chiropractic Clinic in Oberlin, KS.
         </p>
-
-        <p>
-          In Aug. 2000, Dr. Unger started practice at Unger Chiropractic Clinic in
+        <p>In Aug. 2000, Dr. Unger started practice at Unger Chiropractic Clinic in
           St. Francis, KS, and also became an associate at Fair Chiropractic
           Clinic in Oberlin, KS.
         </p>
-
         <p>
           Dr. Unger has advanced training in the diagnosis and treatment of
           structural disorders and total body wellness. He utilizes a
@@ -104,36 +104,31 @@
           nutrition, and low level laser, so that all patients receive the best
           possible care.
         </p>
+        <a class="btn btn-outline-primary mt-3 mb-3" href="#">Call to Action &raquo;</a>
       </div>
-    </div>
+      <div class="col-md-4 mb-5">
+        <h2>Contact Us</h2>
+        <hr>
+        <address>
+          <strong><span style="color:#13315C">Oberlin Clinic</span></strong>
+          <br>504 N Penn Ave
+          <br>Oberlin, KS 67749
+          <br>Phone: (785) 332-2186
+        </address>
+        <address>
+          <strong><span style="color:#13315C">St. Francis Clinic</span></strong>
+          <br>120 N Scott St
+          <br>St. Francis, KS 67756
+          <br>Phone: (785) 475-2219
+          <br>Fax: (785) 475-2210
+        </address>
 
-    <div class="row mb-5">
-      <div class="col-sm-8">
-        <div class="col-sm-4 mt-5 mb-5">
-          <img class="img-fluid" src="./pictures/shannon_addleman_headshot.jpg"
-            alt="A headshot picture of Dr. Shannon Addleman" class="headshot-picture" />
-        </div>
-        <h3>Dr. Shannon Addleman</h3>
-
-        <p>
-          A former Oberlin resident and graduate of DCHS, Dr. Addleman earned her
-          chiropractic degree in 1998 at National College of Chiropractic, same
-          college as Dr. Fair. She has two children, Brynna and Bryant.
-        </p>
-
-        <p>
-          Experienced in the "Thompson Techinique", Dr. Addleman brings with her a
-          special adjusting table to offer the patients a different approach to
-          wellness care. Dr. Addleman also utilizes the Koren Specific technique.
-        </p>
-
-        <p>
-          Dr. Addleman joined Fair Chiropractic Clinic in May, 2007. She has
-          practiced chiropractic in Colorado and in areas of Chicago, Illinois.
-        </p>
       </div>
     </div>
   </div>
+  <!-- /.row -->
+
+
   <!-- Weather Widget -->
 
   <a class="weatherwidget-io" href="https://forecast7.com/en/39d82n100d53/oberlin/?unit=us" data-label_1="OBERLIN"
